// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Title 1`] = `mocked`;

exports[`Mock render - default - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "default",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. code: true - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties. code: true - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": true,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties. code: true",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color:  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.color:  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[{\\"color\\":\\"#009688 !important\\"},null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.color: ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: icon - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.copyable: icon - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": Object {
        "icon": <AntIcon
          basePath=""
          blockId="properties.copyable: icon_copyable_icon"
          components={Object {}}
          content={Object {}}
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties="AiOutlineWarning"
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />,
        "onCopy": [Function],
        "text": undefined,
        "tooltips": undefined,
      },
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.copyable: icon",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: icon: [] - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.copyable: icon: [] - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": Object {
        "icon": Array [
          <AntIcon
            basePath=""
            blockId="properties.copyable: icon: []_copyable_before_icon"
            components={Object {}}
            content={Object {}}
            events={Object {}}
            list={Array []}
            menus={Array []}
            methods={
              Object {
                "makeCssClass": [Function],
                "registerEvent": [Function],
                "registerMethod": [Function],
                "triggerEvent": [Function],
              }
            }
            properties="AiOutlineWarning"
            required={false}
            user={Object {}}
            validation={
              Object {
                "errors": Array [],
                "status": null,
                "warnings": Array [],
              }
            }
          />,
          <AntIcon
            basePath=""
            blockId="properties.copyable: icon: []_copyable_after_icon"
            components={Object {}}
            content={Object {}}
            events={Object {}}
            list={Array []}
            menus={Array []}
            methods={
              Object {
                "makeCssClass": [Function],
                "registerEvent": [Function],
                "registerMethod": [Function],
                "triggerEvent": [Function],
              }
            }
            properties="AiOutlineRocket"
            required={false}
            user={Object {}}
            validation={
              Object {
                "errors": Array [],
                "status": null,
                "warnings": Array [],
              }
            }
          />,
        ],
        "onCopy": [Function],
        "text": undefined,
        "tooltips": undefined,
      },
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.copyable: icon: []",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: text: one - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.copyable: text: one - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": Object {
        "icon": undefined,
        "onCopy": [Function],
        "text": "one",
        "tooltips": undefined,
      },
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.copyable: text: one",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: tooltips: [] - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.copyable: tooltips: [] - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": Object {
        "icon": undefined,
        "onCopy": [Function],
        "text": undefined,
        "tooltips": Array [
          "Click to copy",
          "Copy done",
        ],
      },
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.copyable: tooltips: []",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: true - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.copyable: true - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": true,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.copyable: true",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.delete: true  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.delete: true  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": true,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.delete: true ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.disabled: true  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": true,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.disabled: true ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.editable.icon - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.editable.icon - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "autoSize": undefined,
        "editing": false,
        "icon": <AntIcon
          basePath=""
          blockId="properties.editable.icon_editable_icon"
          components={Object {}}
          content={Object {}}
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties="AiOutlinePlus"
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />,
        "maxLength": undefined,
        "onChange": [Function],
        "onStart": [Function],
        "tooltip": undefined,
      },
      "ellipsis": undefined,
      "id": "properties.editable.icon",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.editable.maxLength: 10 - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.editable.maxLength: 10 - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "autoSize": undefined,
        "editing": false,
        "icon": undefined,
        "maxLength": 10,
        "onChange": [Function],
        "onStart": [Function],
        "tooltip": undefined,
      },
      "ellipsis": undefined,
      "id": "properties.editable.maxLength: 10",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.editable.tooltip - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.editable.tooltip - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "autoSize": undefined,
        "editing": false,
        "icon": undefined,
        "maxLength": undefined,
        "onChange": [Function],
        "onStart": [Function],
        "tooltip": "Change the value",
      },
      "ellipsis": undefined,
      "id": "properties.editable.tooltip",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.editable: false - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.editable: false - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": false,
      "ellipsis": undefined,
      "id": "properties.editable: false",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.editable: true - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.editable: true - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.editable: true",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: expandable, rows - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: expandable, rows - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": Object {
        "expandable": true,
        "onExpand": [Function],
        "rows": 3,
        "suffix": undefined,
      },
      "id": "properties.ellipsis: expandable, rows",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: rows - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: rows - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": Object {
        "expandable": undefined,
        "onExpand": [Function],
        "rows": 3,
        "suffix": undefined,
      },
      "id": "properties.ellipsis: rows",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: rows, suffix - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: rows, suffix - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": Object {
        "expandable": undefined,
        "onExpand": [Function],
        "rows": 3,
        "suffix": "and other",
      },
      "id": "properties.ellipsis: rows, suffix",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: true - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: true - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": true,
      "id": "properties.ellipsis: true",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.italic: true - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.italic: true - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.italic: true",
      "italic": true,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.level: 2  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.level: 2  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.level: 2 ",
      "italic": undefined,
      "level": 2,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.level: 3  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.level: 3  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.level: 3 ",
      "italic": undefined,
      "level": 3,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.level: 4  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.level: 4  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.level: 4 ",
      "italic": undefined,
      "level": 4,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.level: 5 - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.level: 5 - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.level: 5",
      "italic": undefined,
      "level": 5,
      "mark": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mark: true  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.mark: true  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.mark: true ",
      "italic": undefined,
      "level": undefined,
      "mark": true,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: danger  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.type: danger  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.type: danger ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": "danger",
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: secondary  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.type: secondary  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.type: secondary ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": "secondary",
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: warning  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.type: warning  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.type: warning ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": "warning",
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.underline: true  - value[0] - Title 1`] = `mocked`;

exports[`Mock render - properties.underline: true  - value[0] - Title 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{\\"style\\":[null,null]}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "properties.underline: true ",
      "italic": undefined,
      "level": undefined,
      "mark": undefined,
      "type": undefined,
      "underline": true,
    },
    Object {},
  ],
]
`;
